objects/OUV_Reporting__c.object
<CustomObject>
    <label>OUV Reporting</label>
    <nameField>
        <displayFormat>Reporting-{00000}</displayFormat>
        <label>OUV Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OUV Reportings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Status__c</fullName>
        <label>Reporting Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Unactionable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_PreLive__c</fullName>
        <label>Pre Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_HandedIn__c</fullName>
        <label>Handed In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_Variance__c</fullName>
        <description>This field is to calculate the variance in the budget</description>
        <formula>OUV_Budget__c - OUV_ForecastLive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B/(W) Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_LiveToDate__c</fullName>
        <label>Live To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_ForecastLive__c</fullName>
        <formula>Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_FinancialYear__c</fullName>
        <label>Financial Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017/2018</fullName>
                </value>
                <value>
                    <fullName>2018/2019</fullName>
                </value>
                <value>
                    <fullName>2019/2020</fullName>
                </value>
                <value>
                    <fullName>2020/2021</fullName>
                </value>
                <value>
                    <fullName>2021/2022</fullName>
                </value>
                <value>
                    <fullName>2022/2023</fullName>
                </value>
                <value>
                    <fullName>2023/2024</fullName>
                </value>
                <value>
                    <fullName>2024/2025</fullName>
                </value>
                <value>
                    <fullName>2025/2026</fullName>
                </value>
                <value>
                    <fullName>2026/2027</fullName>
                </value>
                <value>
                    <fullName>2027/2028</fullName>
                </value>
                <value>
                    <fullName>2028/2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_ActualHandedIn__c</fullName>
        <label>Actual Handed In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUV_ReportingLevel1__c</fullName>
        <label>Reporting Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Cars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Buybacks</fullName>
                </value>
                <value>
                    <fullName>Expensed Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Level_2__c</fullName>
        <label>Reporting Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_ReportingLevel1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Other</fullName>
                </value>
                <value>
                    <fullName>Cars awaiting sale / rework / disposal</fullName>
                </value>
                <value>
                    <fullName>Classic Donor vehicles</fullName>
                </value>
                <value>
                    <fullName>Corporate Social Responsibility (CSR)</fullName>
                </value>
                <value>
                    <fullName>Customer Buybacks</fullName>
                </value>
                <value>
                    <fullName>Customer Service -Diagnostics/Methods/Product Investigation/Training</fullName>
                    <label>Customer Service - Diagnostics / Methods / Product Investigation / Training</label>
                </value>
                <value>
                    <fullName>Customer Service - Loan Vehicles</fullName>
                </value>
                <value>
                    <fullName>Demonstrators</fullName>
                </value>
                <value>
                    <fullName>Employee vehicle returns/MRC Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks</fullName>
                </value>
                <value>
                    <fullName>Fleet Buybacks awaiting rework/resale</fullName>
                </value>
                <value>
                    <fullName>Heritage/Museum Vehicles</fullName>
                </value>
                <value>
                    <fullName>Homologation Cars</fullName>
                </value>
                <value>
                    <fullName>JLR Experience</fullName>
                </value>
                <value>
                    <fullName>Job Related</fullName>
                </value>
                <value>
                    <fullName>Launch/Events</fullName>
                    <label>Launch / Events</label>
                </value>
                <value>
                    <fullName>Manufacturing/Support Functions Vehicles</fullName>
                </value>
                <value>
                    <fullName>Marketing Asset Production</fullName>
                </value>
                <value>
                    <fullName>Pool Cars</fullName>
                </value>
                <value>
                    <fullName>Press/PR</fullName>
                </value>
                <value>
                    <fullName>Product Development Vehicles</fullName>
                </value>
                <value>
                    <fullName>Product Placement</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Terms of Employment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>VIP Loans</fullName>
                </value>
                <value>
                    <fullName>Written down/Provisioned Units (£1 Vehicles)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Reporting_Level_3__c</fullName>
        <label>Reporting Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OUV_Reporting_Level_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Royal Household (RHH)</fullName>
                </value>
                <value>
                    <fullName>VIP - Corporate</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Charged)</fullName>
                </value>
                <value>
                    <fullName>VIP - Individual (Free of Charge)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>